Accesibilidad en blog de running

--- a/layoutBootstrap.css
+++ b/layoutBootstrap.css
@@ -70,7 +70,7 @@ video {
 
 /** Encabezado **/
 .encabezado {
-    background-image: url("img\merligen-2991122__340.jpg");
+    background-image: url("img/merligen-2991122__340.jpg");
 }
 
 header {
